we love procrastination

--- a/characters/placeholder.html
+++ b/characters/placeholder.html
@@ -1,48 +1,61 @@
-<html><head></head><body><h1 style="text-align: center;">Character Name</h1>
-<h3 style="text-align: center;"><em>Character Quote</em></h3>
-<p style="text-align: center;"><em><img src="https://kirbycreep.github.io/notamoron.jpg" alt="" width="450" height="400"></em></p>
-<p style="text-align: center;">character description</p>
-<table style="height: 236px; margin-left: auto; margin-right: auto;" width="254">
-<tbody>
-<tr>
-<td style="width: 245.333px;" colspan="2">table that tells you properties</td>
-</tr>
-<tr>
-<td style="width: 120px;">attribute 1</td>
-<td style="width: 120px;">value</td>
-</tr>
-<tr>
-<td style="width: 120px;">attribute 2</td>
-<td style="width: 120px;">value</td>
-</tr>
-<tr>
-<td style="width: 120px;">attribute 3</td>
-<td style="width: 120px;">no value</td>
-</tr>
-<tr>
-<td style="width: 120px;">relationships</td>
-<td style="width: 120px;">
-<p>this guy's brother</p>
-<p>this guy's dad</p>
-<p>&nbsp;</p>
-</td>
-</tr>
-<tr>
-<td style="width: 120px;">&nbsp;</td>
-<td style="width: 120px;">&nbsp;</td>
-</tr>
-<tr>
-<td style="width: 120px;">&nbsp;</td>
-<td style="width: 120px;">&nbsp;</td>
-</tr>
-<tr>
-<td style="width: 120px;">&nbsp;</td>
-<td style="width: 120px;">&nbsp;</td>
-</tr>
-<tr>
-<td style="width: 120px;">&nbsp;</td>
-<td style="width: 120px;">&nbsp;</td>
-</tr>
-</tbody>
-</table>
-<p style="text-align: center;">(gallery goes here)</p>ç</body></html>
+<html>
+  <head></head>
+  <body>
+    <h1 style="text-align: center;">Character Name</h1>
+    <h3 style="text-align: center;">
+      <em>Character Quote</em>
+    </h3>
+    <!-- make the CSS file later, i did this off the online html maker that doesn't use css for some reason -->
+    <p style="text-align: center;">
+      <em>
+        <img src="https://kirbycreep.github.io/notamoron.jpg" alt="" width="450" height="400">
+      </em>
+    </p>
+    <p style="text-align: center;">character description</p>
+    <!-- figure out how to color the table -->
+    <table style="height: 236px; margin-left: auto; margin-right: auto;" width="254">
+      <tbody>
+        <tr>
+          <td style="width: 245.333px;" colspan="2">table that tells you properties</td>
+        </tr>
+        <tr>
+          <td style="width: 120px;">attribute 1</td>
+          <td style="width: 120px;">value</td>
+        </tr>
+        <tr>
+          <td style="width: 120px;">attribute 2</td>
+          <td style="width: 120px;">value</td>
+        </tr>
+        <tr>
+          <td style="width: 120px;">attribute 3</td>
+          <td style="width: 120px;">no value</td>
+        </tr>
+        <tr>
+          <td style="width: 120px;">relationships</td>
+          <td style="width: 120px;">
+            <p>this guy's brother</p>
+            <p>this guy's dad</p>
+            <p>&nbsp;</p>
+          </td>
+        </tr>
+        <tr>
+          <td style="width: 120px;">&nbsp;</td>
+          <td style="width: 120px;">&nbsp;</td>
+        </tr>
+        <tr>
+          <td style="width: 120px;">&nbsp;</td>
+          <td style="width: 120px;">&nbsp;</td>
+        </tr>
+        <tr>
+          <td style="width: 120px;">&nbsp;</td>
+          <td style="width: 120px;">&nbsp;</td>
+        </tr>
+        <tr>
+          <td style="width: 120px;">&nbsp;</td>
+          <td style="width: 120px;">&nbsp;</td>
+        </tr>
+      </tbody>
+    </table>
+    <p style="text-align: center;">(gallery goes here)</p>ç
+  </body>
+</html>
