--- a/characters/placeholder.html
+++ b/characters/placeholder.html
@@ -56,6 +56,6 @@
         </tr>
       </tbody>
     </table>
-    <p style="text-align: center;">(gallery goes here)</p>ç
+    <p style="text-align: center;">(gallery goes here)</p>
   </body>
 </html>
