--- a/index.html
+++ b/index.html
@@ -1,2 +1,37 @@
-<head></head>
-<body><p>wip!!!</p></body>
+<!DOCTYPE html>
+<html>
+<head>
+<title>kirbv's pile of characters</title>
+<link rel="stylesheet" href="assets/style.css">
+</head>
+<body>
+<h1 class="center">placeholder for logo image</h1>
+<p class="center">more placeholder text text text text text text</p>
+<div class="row">
+  <div class="column">
+    <img src="https://kirbycreep.github.io/charpile/assets/placeholder200x200.png">
+    <p>
+      text
+    </p>
+  </div>
+  <div class="column"><img src="https://kirbycreep.github.io/charpile/assets/placeholder200x200.png">
+  <p>
+    text
+    </p></div>
+</div>
+  <div class="row">
+  <div class="column">
+    <img src="https://kirbycreep.github.io/charpile/assets/placeholder200x200.png">
+    <p>
+      text
+    </p>
+  </div>
+  <div class="column"><img src="https://kirbycreep.github.io/charpile/assets/placeholder200x200.png">
+    <p>
+      text
+    </p></div>
+</div>
+  
+
+</body>
+</html>
