--- a/index.html
+++ b/index.html
@@ -1,38 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>kirbv's pile of characters</title>
-<link rel="stylesheet" href="assets/style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-<h1 class="center">placeholder for logo image</h1>
-<p class="center">more placeholder text text text text text text</p>
-<div class="row">
-  <div class="column">
-    <img src="https://kirbycreep.github.io/charpile/assets/placeholder200x200.png">
-    <p>
-      text
-    </p>
-  </div>
-  <div class="column"><img src="https://kirbycreep.github.io/charpile/assets/placeholder200x200.png">
-  <p>
-    text
-    </p></div>
-</div>
-  <div class="row">
-  <div class="column">
-    <img src="https://kirbycreep.github.io/charpile/assets/placeholder200x200.png">
-    <p>
-      text
-    </p>
-  </div>
-  <div class="column"><img src="https://kirbycreep.github.io/charpile/assets/placeholder200x200.png">
-    <p>
-      text
-    </p></div>
-</div>
-  
-
-</body>
+	<head>
+		<title>kirbv's pile of characters</title>
+		<link rel="stylesheet" href="assets/style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	</head>
+	<body>
+		<!-- <h1 class="center">placeholder for logo image</h1> -->
+		<div class="center">
+			<img src="assets/logo.png">
+		</div>
+		<p class="center">i'll make this page functional later</p>
+		<div class="row">
+			<div class="column">
+				<img src="assets/placeholder200x200.png">
+				<p>
+					text
+				</p>
+			</div>
+			<div class="column">
+				<img src="assets/placeholder200x200.png">
+				<p>
+					text
+				</p>
+			</div>
+			<div class="column">
+				<img src="assets/placeholder200x200.png">
+				<p>
+					text
+				</p>
+			</div>
+			<div class="column">
+				<img src="assets/placeholder200x200.png">
+				<p>
+					text
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="column">
+				<img src="assets/placeholder200x200.png">
+				<p>
+					text
+				</p>
+			</div>
+			<div class="column">
+				<img src="assets/placeholder200x200.png">
+				<p>
+					text
+				</p>
+			</div>
+		</div>
+	</body>
 </html>
