curse of the singular miscolored pixel

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<p class="center">i'll make this page functional later</p>
 		<div class="row">
 			<div class="column">
-				<img src="assets/placeholder200x200.png">
+				<a href="refs/template"><img src="assets/placeholder200x200.png"></a>
 				<p>
 					text
 				</p>
